--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
